[ADD] Tpe registrer is accessible only with a secret key passed in custom header + the register send a random password to connect with