@@ -1,8 +1,11 @@
 package com.api.auth.controller;
 
+import com.api.auth.annotation.TpeRegisterSecuredRoute;
 import com.api.auth.model.TpeLoginCredentials;
+import com.api.auth.model.TpeRegisterCredentials;
 import com.api.auth.security.JWTUtil;
 import com.api.auth.security.providers.TpeAuthenticationProvider;
+import com.api.auth.service.AuthService;
 import com.api.bank.model.entity.Tpe;
 import com.api.bank.repository.TpeRepository;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -14,6 +17,8 @@ import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RequestMethod;
 import org.springframework.web.bind.annotation.RestController;
 
+import javax.servlet.http.HttpServletRequest;
+import javax.servlet.http.HttpServletResponse;
 import java.util.Collections;
 import java.util.Map;
 
@@ -32,14 +37,28 @@ public class AuthTpeController {
     @Autowired
     private TpeRepository tpeRepository;
 
+    @Autowired
+    private AuthService authService;
+
+    @TpeRegisterSecuredRoute
     @RequestMapping(path = "/register", method = RequestMethod.POST)
-    public Map<String, Object> registerHandler(@RequestBody Tpe tpe){
-        if (!tpeRepository.existsByMac(tpe.getMac())) {
-            String encodedPass = passwordEncoder.encode(tpe.getSerial());
-            tpe.setSerial(encodedPass);
+    public Map<String, Object> registerHandler(
+            @RequestBody TpeRegisterCredentials tpeRegisterCredentials,
+            HttpServletRequest request,
+            HttpServletResponse response
+    ) {
+        if (!tpeRepository.existsByMac(tpeRegisterCredentials.getId())) {
+            String randomPassword = authService.alphaNumericString(12);
+            String encodedPass = passwordEncoder.encode(randomPassword);
+            Tpe tpe = new Tpe(tpeRegisterCredentials.getId(), encodedPass);
             tpe.setWhitelisted(false);
             tpeRepository.save(tpe);
-            return Collections.singletonMap("message", "TPE registered successfully. It needs to be whitelisted.");
+            // Return list with two attributes: message and password
+            return Map.of(
+                    "message", "TPE registered successfully. It needs to be whitelisted.",
+                    "password", randomPassword
+            );
+            //return Collections.singletonMap("message", "TPE registered successfully. It needs to be whitelisted.");
         } else {
             return Collections.singletonMap("message", "TPE already registered.");
         }
